# hackathon

./: .gitignore  client.py  pyproject.toml  readme.md  test.py
src/: main.py
src/agents/: __init__.py  assistant.py
src/messages/: __init__.py  general.py
src/utils/: ai.py  database.py  exceptions.py  time_manager.py
