[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Suryansh2002 <suryanshwins2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
uagents = "^0.9.2"
openai = "^1.6.1"
odmantic = "0.9.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
